src/components/overlay/_overlay.scss
@keyframes openOverlay {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.overlay {
  position: relative;
  width: 100%;
  height: 100%;
  display: none;
  opacity: 0;
  animation: openOverlay 100ms ease-in-out forwards;
  z-index: 11;

  &.active {
    display: block;
    opacity: 1;
  }

  .overlay-contents {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.42);
    z-index: 4;
    text-align: center;
    color: #fff;
    padding: 60px 20px 30px 20px;
    overflow-y: auto;
  }

  .title {
    font-size: 24px;
    font-weight: bold;
    line-height: 29px;
    margin-bottom: 60px;
  }
  .close-overlay {
    position: absolute;
    top: 48px;
    right: 48px;
    z-index: 5;
    cursor: pointer;

    .icon-close {
      width: 24px;
      height: 24px;
    }
  }

  .overlay-screen {
    display: none;

    &.active {
      display: block;
    }
  }
}

.player.size-md {
  .overlay {
    .overlay-contents {
      padding: 36px 20px;
    }

    .close-overlay {
      top: 38px;
    }
    .title {
      margin-bottom: 24px;
    }
  }
}

.player.size-sm {
  .overlay {
    .overlay-contents {
      padding: 16px 24px;
    }

    .close-overlay {
      top: 15px;
      right: 24px;
    }
    .title {
      font-size: 16px;
      line-height: 19px;
      margin-bottom: 24px;
    }
  }
}

